--- a/poseries/src/main/java/de/tyranus/poseries/gui/messages.properties
+++ b/poseries/src/main/java/de/tyranus/poseries/gui/messages.properties
@@ -5,7 +5,7 @@ MainWindow_btnPostProcess_text=Post process series
 MainWindow_btnRefresh_text=Refresh
 MainWindow_btnSrcSelect_text=Choose...
 MainWindow_lblDestinationDirecory_text=Destination direcory
-MainWindow_lblFileExtensions_text=Filename extensions
+MainWindow_lblFileExtensions_text=Filename pattern
 MainWindow_lblFileExtensions_toolTipText=Only files with a listed extension will be processed. \r\nExample\: avi,flv
 MainWindow_lblSourceDirectoryPattern_text=Source directory pattern
 MainWindow_lblSourceDirectory_text=Source directory
