--- a/poseries/src/main/java/de/tyranus/poseries/gui/messages.properties
+++ b/poseries/src/main/java/de/tyranus/poseries/gui/messages.properties
@@ -1,7 +1,9 @@
 #Eclipse modern messages class
-#Mon Dec 24 10:50:14 CET 2012
+#Sun Jan 06 23:45:56 CET 2013
+MainWindow_btnCopy_text=Copy
 MainWindow_btnDstSelect_text=Choose...
 MainWindow_btnPostProcess_text=Post process series
+MainWindow_btnRadioButton_text=Move
 MainWindow_btnRefresh_text=Refresh
 MainWindow_btnSrcSelect_text=Choose...
 MainWindow_lblDestinationDirecory_text=Destination direcory
@@ -10,4 +12,12 @@ MainWindow_lblFileExtensions_toolTipText=Only files with a listed extension will
 MainWindow_lblSourceDirectoryPattern_text=Source directory pattern
 MainWindow_lblSourceDirectory_text=Source directory
 MainWindow_lblSourceDirectory_toolTipText=Select one the directories that contains the data you want to process. Don't select the directory above.
+MainWindow_lblSpeed_text=Speed\:
+MainWindow_lblStep1_text=1. Select as source directory one of the different subdirectories your files lie in.
+MainWindow_lblStep2_text=2. Change the directory pattern if the discovered pattern does not fit your needs.\r\n    You can use wildcards. Example\: all_months-2012-*
+MainWindow_lblStep3_text=3. Enter the extensions to select files to copy or move from the subdirectories.\r\n    You can also enter a list of extensions. Example\: avi,mpg,mkv
+MainWindow_lblStep4_text=4. Refresh after making changes to see if all your files are found in the preview.
+MainWindow_lblStep5_text=5. Chose the directory where the files should appear and choose copy or move.
+MainWindow_lblStep6_text=6. Start processing the files from the preview.
+MainWindow_lblTotalSize_text=Total size\: 
 MainWindow_shell_text=PoSeries - Series Post Download
