--- a/poseries/src/main/java/de/tyranus/poseries/gui/messages_de.properties
+++ b/poseries/src/main/java/de/tyranus/poseries/gui/messages_de.properties
@@ -1,7 +1,9 @@
 #Eclipse modern messages class
-#Mon Dec 24 10:51:12 CET 2012
+#Sun Jan 06 23:48:37 CET 2013
+MainWindow_btnCopy_text=Kopieren
 MainWindow_btnDstSelect_text=Auswahl...
 MainWindow_btnPostProcess_text=Verarbeite Daten
+MainWindow_btnRadioButton_text=Verschieben
 MainWindow_btnRefresh_text=Aktualisieren
 MainWindow_btnSrcSelect_text=Auswahl...
 MainWindow_lblDestinationDirecory_text=Zielverzeichnis
@@ -10,4 +12,12 @@ MainWindow_lblFileExtensions_toolTipText=Nur Dateien mit den angegebenen Erweite
 MainWindow_lblSourceDirectoryPattern_text=Verzeichnismuster
 MainWindow_lblSourceDirectory_text=Quellverzeichnis
 MainWindow_lblSourceDirectory_toolTipText=W\u00E4hle eines der Verzeichnisse aus, das Daten enth\u00E4lt, die verarbeitet werden sollen. W\u00E4hle nicht das dar\u00FCberliegende Verzeichnis aus.
+MainWindow_lblSpeed_text=Geschw.\:
+MainWindow_lblStep1_text=1. W\u00E4hle als Quellverzeichnis eines der Verzeichnisse, in denen die Dateien liegen.
+MainWindow_lblStep2_text=2. \u00C4ndere das Muster f\u00FCr Unterverzeichnisse, falls die Vorauswahl nicht passt.\r\n    Du kannst Platzhalter verwenden. Beispiel\: alle_monate-2012-*
+MainWindow_lblStep3_text=3. Definiere anhand von Erweiterungen, welche Dateien verarbeitet werden sollen.\r\n    Du kannst auch eine Liste von Erweiterugen angeben. Beispiel\: avi,mpg,mkv
+MainWindow_lblStep4_text=4. Aktualisiere nachdem du Einstellungen verh\u00E4ndert hast die Vorschau.
+MainWindow_lblStep5_text=5. W\u00E4hle das Zielverzeichnis f\u00FCr die Dateien und Kopieren oder Verschieben.
+MainWindow_lblStep6_text=6. Starte die Verarbeitung der Dateien, die in der Vorschau angezeigt werden.
+MainWindow_lblTotalSize_text=Gesamt\:
 MainWindow_shell_text=PoSeries - Series Post Download
