--- a/poseries/src/main/java/de/tyranus/poseries/gui/messages.properties
+++ b/poseries/src/main/java/de/tyranus/poseries/gui/messages.properties
@@ -1,5 +1,5 @@
 #Eclipse modern messages class
-#Sun Jan 06 23:45:56 CET 2013
+#Mon Jan 07 00:33:52 CET 2013
 MainWindow_btnCopy_text=Copy
 MainWindow_btnDstSelect_text=Choose...
 MainWindow_btnPostProcess_text=Post process series
@@ -7,6 +7,7 @@ MainWindow_btnRadioButton_text=Move
 MainWindow_btnRefresh_text=Refresh
 MainWindow_btnSrcSelect_text=Choose...
 MainWindow_lblDestinationDirecory_text=Destination direcory
+MainWindow_lblEnd_text=End\:
 MainWindow_lblFileExtensions_text=Filename pattern
 MainWindow_lblFileExtensions_toolTipText=Only files with a listed extension will be processed. \r\nExample\: avi,flv
 MainWindow_lblSourceDirectoryPattern_text=Source directory pattern
