--- a/poseries/src/main/java/de/tyranus/poseries/gui/messages_de.properties
+++ b/poseries/src/main/java/de/tyranus/poseries/gui/messages_de.properties
@@ -1,5 +1,5 @@
 #Eclipse modern messages class
-#Sun Jan 06 23:48:37 CET 2013
+#Mon Jan 07 00:57:13 CET 2013
 MainWindow_btnCopy_text=Kopieren
 MainWindow_btnDstSelect_text=Auswahl...
 MainWindow_btnPostProcess_text=Verarbeite Daten
@@ -7,6 +7,7 @@ MainWindow_btnRadioButton_text=Verschieben
 MainWindow_btnRefresh_text=Aktualisieren
 MainWindow_btnSrcSelect_text=Auswahl...
 MainWindow_lblDestinationDirecory_text=Zielverzeichnis
+MainWindow_lblEnd_text=Ende\:
 MainWindow_lblFileExtensions_text=Dateimuster
 MainWindow_lblFileExtensions_toolTipText=Nur Dateien mit den angegebenen Erweiterungen werden verarbeitet. Beispiel\: avi,flv
 MainWindow_lblSourceDirectoryPattern_text=Verzeichnismuster
